# GoogleTest

./: CMakeLists.txt  main.cpp
Tests/: ClassName.h  test.cpp
